Refactor input helper method